--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="list_background_color">#fff1f1f1</color>
      <color name="title">#F20056</color>
        <color name="purple">#844399</color>
+    <color name="purple_status">#BA68C8</color>
        <color name="red">#DD0D7E</color>
          <color name="grey">#bcbebf</color>
 
